--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,11 +28,11 @@
                 <option value="train">Train</option>
             </select>
             Shipment Code: <input type="text" name="shipCode" id="shipCode" class="form-control">
-            Enable Shipment: <input type="radio" name="enableShip" id="enableShip1"> Yes
-            <input type="radio" name="enableShip" id="enableShip2"> No <br>
-            Shipment Grade: <input type="radio" name="shipGrade" id="shipGrade1"> A
-            <input type="radio" name="shipGrade" id="shipGrade2"> B
-            <input type="radio" name="shipGrade" id="shipGrade3"> C <br>
+            Enable Shipment: <input type="radio" name="enableShip" id="enableShip1" value="Yes"> Yes
+            <input type="radio" name="enableShip" id="enableShip2" value="No"> No <br>
+            Shipment Grade: <input type="radio" name="shipGrade" id="shipGrade1" value="A"> A
+            <input type="radio" name="shipGrade" id="shipGrade2" value="B"> B
+            <input type="radio" name="shipGrade" id="shipGrade3" value="C"> C <br>
             Desciption: <textarea name="shipDesc" id="shipDesc" cols="50" rows="3"></textarea><br>
             <input type="submit" value="Create" class="btn btn-success">
         </form>
